--- a/package.json
+++ b/package.json
@@ -1,24 +1,30 @@
 {
   "name": "mallva",
-  "version": "0.1.0",
+  "description": "Starbucks demo page",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type:check": "tsc --pretty --noEmit"
   },
   "dependencies": {
+    "next": "13.4.10",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "@total-typescript/ts-reset": "^0.4.2",
     "@types/node": "20.4.2",
     "@types/react": "18.2.15",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.14",
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.10",
-    "next": "13.4.10",
     "postcss": "8.4.26",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "sass": "^1.63.6",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
