--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "type:check": "tsc --pretty --noEmit"
   },
   "dependencies": {
+    "clsx": "^1.2.1",
     "next": "13.4.10",
     "react": "18.2.0",
     "react-dom": "18.2.0"
@@ -25,6 +26,7 @@
     "eslint-config-next": "13.4.10",
     "postcss": "8.4.26",
     "sass": "^1.63.6",
+    "tailwind-merge": "^1.13.2",
     "tailwindcss": "3.3.3",
     "typescript": "5.1.6"
   }
