--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   },
   "dependencies": {
     "clsx": "^1.2.1",
+    "final-form": "^4.20.9",
     "next": "13.4.10",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-final-form": "^6.5.9",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@total-typescript/ts-reset": "^0.4.2",
