--- a/.env.sample
+++ b/.env.sample
@@ -1,9 +1,9 @@
-MALLVA_DB_URL=
-MALLVA_DB_PRISMA_URL=
-MALLVA_DB_URL_NON_POOLING=
-MALLVA_DB_USER=
-MALLVA_DB_HOST=
-MALLVA_DB_PASSWORD=
-MALLVA_DB_DATABASE=
+SB_DEMO_DB_URL=
+SB_DEMO_DB_PRISMA_URL=
+SB_DEMO_DB_URL_NON_POOLING=
+SB_DEMO_DB_USER=
+SB_DEMO_DB_HOST=
+SB_DEMO_DB_PASSWORD=
+SB_DEMO_DB_DATABASE=
 
 NEXTAUTH_SECRET=
